[gd_scene load_steps=14 format=3 uid="uid://c7423f41j0fg3"]

[ext_resource type="Texture2D" uid="uid://qk3ha65v0lsg" path="res://assets/items.png" id="1_7b4jc"]
[ext_resource type="Script" path="res://animations/cooking_animation.gd" id="1_fw5ej"]
[ext_resource type="Texture2D" uid="uid://cno866v7sk8h4" path="res://assets/particles/particle_bubble.png" id="2_6rmhf"]
[ext_resource type="Shader" path="res://shaders/white_shader.gdshader" id="2_cs3ij"]
[ext_resource type="Material" uid="uid://xsna4pnbmx4w" path="res://animations/cooking_animation_material.tres" id="3_akcjf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xngph"]
shader = ExtResource("2_cs3ij")
shader_parameter/whiten = true
shader_parameter/mix_weight = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ovcn1"]
shader = ExtResource("2_cs3ij")
shader_parameter/whiten = true
shader_parameter/mix_weight = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jt8kn"]
shader = ExtResource("2_cs3ij")
shader_parameter/whiten = true
shader_parameter/mix_weight = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o5drn"]
shader = ExtResource("2_cs3ij")
shader_parameter/whiten = true
shader_parameter/mix_weight = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lal3w"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 200.0
emission_ring_radius = 200.0
emission_ring_inner_radius = 180.0
spread = 0.0
radial_accel_min = -100.0
radial_accel_max = -100.0

[sub_resource type="Animation" id="Animation_ior5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CookingAnimation/PanelContainer/OutputItem:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CookingAnimation/PanelContainer/InputItem1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CookingAnimation/PanelContainer/InputItem2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CookingAnimation/PanelContainer/InputItem3:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CookingAnimation/PanelContainer/InputItem4:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CookingAnimation/PanelContainer/InputItem3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(90, 225)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CookingAnimation/PanelContainer/InputItem2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(225, 360)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CookingAnimation/PanelContainer/InputItem1:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(225, 90)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CookingAnimation/PanelContainer/InputItem4:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(360, 225)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CookingAnimation/PanelContainer/OutputItem:material:shader_parameter/mix_weight")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CookingAnimation/PanelContainer/InputItem1:material:shader_parameter/mix_weight")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CookingAnimation/PanelContainer/InputItem2:material:shader_parameter/mix_weight")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CookingAnimation/PanelContainer/InputItem4:material:shader_parameter/mix_weight")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("CookingAnimation/PanelContainer/InputItem3:material:shader_parameter/mix_weight")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_e3ymm"]
resource_name = "fusing"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CookingAnimation/PanelContainer/OutputItem:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.2, 2),
"transitions": PackedFloat32Array(1.23114, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CookingAnimation/PanelContainer/InputItem1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.6, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(0.4, 0.4), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CookingAnimation/PanelContainer/InputItem2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.6, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(0.4, 0.4), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CookingAnimation/PanelContainer/InputItem3:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.6, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(0.4, 0.4), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CookingAnimation/PanelContainer/InputItem4:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.6, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(0.4, 0.4), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CookingAnimation/PanelContainer/InputItem3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(100, 250), Vector2(225, 225)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CookingAnimation/PanelContainer/InputItem2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(250, 400), Vector2(225, 225)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CookingAnimation/PanelContainer/InputItem1:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.0001, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(250, 100), Vector2(250, 100), Vector2(225, 225)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CookingAnimation/PanelContainer/InputItem4:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(400, 250), Vector2(225, 225)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CookingAnimation/PanelContainer/OutputItem:material:shader_parameter/mix_weight")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1.2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CookingAnimation/PanelContainer/InputItem1:material:shader_parameter/mix_weight")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.0001, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CookingAnimation/PanelContainer/InputItem2:material:shader_parameter/mix_weight")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CookingAnimation/PanelContainer/InputItem4:material:shader_parameter/mix_weight")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("CookingAnimation/PanelContainer/InputItem3:material:shader_parameter/mix_weight")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bnbbu"]
_data = {
"RESET": SubResource("Animation_ior5w"),
"fusing": SubResource("Animation_e3ymm")
}

[node name="CookingAnimation" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_fw5ej")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -225.0
offset_right = 225.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="InputItem1" type="Sprite2D" parent="PanelContainer"]
material = SubResource("ShaderMaterial_xngph")
position = Vector2(225, 90)
texture = ExtResource("1_7b4jc")
hframes = 10
vframes = 10

[node name="InputItem2" type="Sprite2D" parent="PanelContainer"]
material = SubResource("ShaderMaterial_ovcn1")
position = Vector2(225, 360)
texture = ExtResource("1_7b4jc")
hframes = 10
vframes = 10

[node name="InputItem3" type="Sprite2D" parent="PanelContainer"]
material = SubResource("ShaderMaterial_jt8kn")
position = Vector2(90, 225)
texture = ExtResource("1_7b4jc")
hframes = 10
vframes = 10

[node name="InputItem4" type="Sprite2D" parent="PanelContainer"]
material = SubResource("ShaderMaterial_o5drn")
position = Vector2(360, 225)
texture = ExtResource("1_7b4jc")
hframes = 10
vframes = 10

[node name="OutputItem" type="Sprite2D" parent="PanelContainer"]
material = ExtResource("3_akcjf")
position = Vector2(225, 225)
texture = ExtResource("1_7b4jc")
hframes = 10
vframes = 10
frame = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 50
process_material = SubResource("ParticleProcessMaterial_lal3w")
texture = ExtResource("2_6rmhf")
lifetime = 1.6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_bnbbu")
}
